perf: use `attr()` to implement the `<raw-text text="">`

--- a/packages/web-platform/web-elements/src/XText/x-text.css
+++ b/packages/web-platform/web-elements/src/XText/x-text.css
@@ -270,3 +270,8 @@ x-text > lynx-wrapper > raw-text,
 inline-text > lynx-wrapper > raw-text {
   display: contents !important;
 }
+
+raw-text[text]::before {
+  display: contents;
+  content: attr(text);
+}
