perf: remove the private fields usage to cut down the bundle size

--- a/packages/web-platform/web-elements/src/XSwiper/x-swiper.css
+++ b/packages/web-platform/web-elements/src/XSwiper/x-swiper.css
@@ -150,7 +150,7 @@ x-swiper::part(indicator-container) {
   height: var(--indicator-size);
   contain: strict;
   margin-bottom: var(--indicator-container-margin);
-  --indicator-color: #ffffff4d;
+  --indicator-color: __ffffff4d;
   --indicator-active-color: white;
 }
 
