refactor: improve compatibility for text linear-gradient color on chrome 108
Before this commit we use toggle pattern to generate `background-clip`, `-webkit-background-clip` and `color`. After this commit we genarete these styles directly.

On chrome 108, the `-webkit-background-clip:text` cannot be computed by a `var(--css-var-value-text)`

Therefore we move the logic into style transformation logic.

--- a/packages/web-platform/web-elements/src/XText/x-text.css
+++ b/packages/web-platform/web-elements/src/XText/x-text.css
@@ -7,8 +7,10 @@
 x-text {
   display: flex;
   overflow-wrap: break-word;
-  --lynx-color: none;
+  --lynx-color: initial;
+  --lynx-text-bg-color: initial;
   align-items: stretch;
+  color: var(--lynx-color);
 }
 x-text:not(:defined) {
   display: none;
@@ -20,53 +22,17 @@ x-text > * {
 
 x-text::part(inner-box) {
   text-overflow: inherit;
-  --lynx-color: inherit;
-  --lynx-color-gradient: inherit;
+  --lynx-text-bg-color: inherit;
 }
 
 x-text > x-text::part(inner-box),
 x-text > lynx-wrapper > x-text::part(inner-box) {
   display: inline !important;
 }
-x-text, inline-text {
-  --lynx-color-toggle: var(--lynx-color-normal);
-  --lynx-color-gradient: var(--lynx-color-toggle,);
-  --lynx-color-normal: var(--lynx-color-toggle,);
-}
-
-/** For: `-a:var(-b,) -b:var(-a,) -c:var(-a)` -a,-b,-c will can be incorrectly detected as invalid when chrome version lower than 99
-  so we not support gradient
-  detail: https://issues.chromium.org/issues/40172841
-  chrome 99, firefox 46, safari 7
-  https://developer.mozilla.org/en-US/docs/Web/CSS/text-emphasis
- 
-  References:
-  https://developer.chrome.com/blog/new-in-chrome-99
-  https://chromestatus.com/feature/5679635154075648
-  https://developer.mozilla.org/en-US/docs/Web/CSS/text-emphasis
-  */
-/* autoprefixer: ignore next */
-@supports (text-emphasis: none) {
-  x-text::part(inner-box), inline-text {
-    background: var(--lynx-color-gradient, var(--lynx-color)) var(
-      --lynx-color-normal,
-      initial
-    );
-    -webkit-text-fill-color: var(--lynx-color-gradient, transparent) var(
-      --lynx-color-normal,
-      initial
-    );
-    background-clip: var(--lynx-color-gradient, text) var(
-      --lynx-color-normal,
-      initial
-    );
-    /* exist issue: https://github.com/facebook/react/issues/14200 */
-    /* import flag is essential on chromium */
-    -webkit-background-clip: var(--lynx-color-gradient, text) var(
-      --lynx-color-normal,
-      initial
-    );
-  }
+x-text::part(inner-box), inline-text {
+  background-clip: inherit;
+  -webkit-background-clip: inherit;
+  background-image: var(--lynx-text-bg-color);
 }
 inline-text, inline-image, inline-truncation {
   display: none;
