--- a/packages/web-platform/web-elements/src/XText/x-text.css
+++ b/packages/web-platform/web-elements/src/XText/x-text.css
@@ -7,10 +7,13 @@
 x-text {
   display: flex;
   overflow-wrap: break-word;
-  --lynx-color: initial;
-  --lynx-text-bg-color: initial;
   align-items: stretch;
   color: var(--lynx-color);
+  background-image: var(--lynx-text-bg-color);
+}
+x-text:not(x-text > x-text):not(x-text > lynx-wrapper > x-text) {
+  --lynx-color: canvastext;
+  --lynx-text-bg-color: initial;
 }
 x-text:not(:defined) {
   display: none;
@@ -27,12 +30,11 @@ x-text::part(inner-box) {
 
 x-text > x-text::part(inner-box),
 x-text > lynx-wrapper > x-text::part(inner-box) {
-  display: inline !important;
+  display: contents !important;
 }
 x-text::part(inner-box), inline-text {
   background-clip: inherit;
   -webkit-background-clip: inherit;
-  background-image: var(--lynx-text-bg-color);
 }
 inline-text, inline-image, inline-truncation {
   display: none;
@@ -40,14 +42,12 @@ inline-text, inline-image, inline-truncation {
 
 /* nested components */
 x-text > x-text:defined,
-x-text > x-text:defined::part(inner-box),
 x-text > inline-text:defined,
 x-text > x-text:defined,
 inline-text > inline-text:defined,
 inline-truncation > inline-text:defined,
 inline-truncation > x-text:defined,
 x-text > lynx-wrapper > x-text:defined,
-x-text > lynx-wrapper > x-text:defined::part(inner-box),
 x-text > lynx-wrapper > inline-text:defined,
 x-text > lynx-wrapper > x-text:defined,
 inline-text > lynx-wrapper > inline-text:defined,
@@ -55,6 +55,7 @@ x-text > lynx-wrapper > x:defined,
 inline-truncation > lynx-wrapper > inline-text:defined,
 inline-truncation > lynx-wrapper > x-text:defined {
   display: inline;
+  background-clip: inherit;
 }
 
 x-text > inline-image:defined,
