fix(web): x-foldview-ng overflow-y: scroll add important to avoid being covered.

--- a/packages/web-platform/web-elements/src/XFoldViewNg/x-foldview-ng.css
+++ b/packages/web-platform/web-elements/src/XFoldViewNg/x-foldview-ng.css
@@ -5,7 +5,7 @@
 */
 x-foldview-ng {
   display: flex;
-  overflow-y: scroll;
+  overflow-y: scroll !important;
   overflow-x: clip;
   overflow-x: hidden;
   overscroll-behavior: contain;
