--- a/packages/web-platform/web-elements/src/common-css/linear.css
+++ b/packages/web-platform/web-elements/src/common-css/linear.css
@@ -283,13 +283,25 @@ list-item {
     x-textarea,
     x-list,
     list-item {
+      /* 
+       `--lynx-linear-weight-sum`
+       0 -> 1
+       <value> -> <value>
+       */
       flex-shrink: 0;
       flex-grow: calc(
-        var(--lynx-linear-weight) / var(--lynx-linear-weight-sum)
+        var(--lynx-linear-weight) /
+          calc(
+          var(--lynx-linear-weight-sum) +
+            (
+            1 - clamp(0, var(--lynx-linear-weight-sum) * 999999, 1)
+          )
+        )
       );
       flex-basis: var(--lynx-linear-weight-basis);
     }
   }
+
   @container not style(--lynx-display: linear) {
     x-view,
     x-blur-view,
