--- a/packages/web-platform/web-elements/src/XSvg/x-svg.css
+++ b/packages/web-platform/web-elements/src/XSvg/x-svg.css
@@ -4,31 +4,12 @@
 // LICENSE file in the root directory of this source tree.
 */
 x-svg {
-  contain: strict;
-  background: no-repeat center;
-  background-size: 100% 100%;
+  contain: content;
+  display: flex;
 }
 
 x-svg::part(img) {
-  margin: inherit;
-  padding: inherit;
-  width: inherit;
-  height: inherit;
-  box-sizing: inherit;
-  flex: inherit;
-  min-width: inherit;
-  min-height: inherit;
-  border: inherit;
-  border-radius: inherit;
-  max-width: 100%;
-  max-height: 100%;
-  position: inherit;
-  top: inherit;
-  left: inherit;
-  right: inherit;
-  bottom: inherit;
-  transform: inherit;
-  opacity: inherit;
-  z-index: inherit;
-  filter: inherit;
+  width: 100%;
+  height: 100%;
+  flex: 0 0 100%;
 }
