--- a/packages/web-platform/web-elements/src/XSvg/x-svg.css
+++ b/packages/web-platform/web-elements/src/XSvg/x-svg.css
@@ -9,7 +9,20 @@ x-svg {
 }
 
 x-svg::part(img) {
-  width: 100%;
-  height: 100%;
-  flex: 0 0 100%;
+  margin: inherit;
+  padding: inherit;
+  width: inherit;
+  height: inherit;
+  box-sizing: inherit;
+  flex: inherit;
+  min-width: inherit;
+  min-height: inherit;
+  border: inherit;
+  border-radius: inherit;
+  max-width: 100%;
+  max-height: 100%;
+  transform: inherit;
+  opacity: inherit;
+  z-index: inherit;
+  filter: inherit;
 }
